# RealEstateID-matching-system

./: README.md  index.html  index.json  manifest.json
dbbuild/: Dockerfile  README.md  docker-compose.yml  requirements.txt
dbbuild/app/: run.sh  run_optional_steps.sh
dbbuild/app/python/: clean_touki_tatemono.py  clean_touki_tochi.py  create_gappitsu.py  create_geocoding_dictionary.py  generate_plateau_attributes.py  usage_codes_mapping.csv
dbbuild/app/python/lib/: clean_touki.py  dbman.py
dbbuild/app/sql/: 01_init_tables.sql  02_generate_fude_data.sql  03_generate_tochi_data.sql  05_generate_building_data.sql  07_update_building_master.sql  08_create_master.sql  09_plateau_matching.sql
dbbuild/manual/: 90_create_data.md
dbbuild/sample/: format.md  plateau2d.gpkg
manual/: create_dbMan.html  matchingMan.html  toc.html  toc.json
markdown/: index.md
markdown/manual/: create_dbMan.md  matchingMan.md  toc.yml
matching/batch/: Dockerfile  README.md
matching/batch/src/: lod0FootPrint.gfs  lod0RoofEdge.gfs  main.py
matching/uploder/backend/: Dockerfile  README.md  app.py  config.py  policy.json  pyproject.toml  requirements.txt
matching/uploder/frontend/: package.json  tailwind.config.js  vite.config.ts
matching/uploder/frontend/src/: App.vue  main.ts
matching/uploder/frontend/src/components/: Upload.vue
matching/uploder/frontend/src/modules/: api.ts
